Modified background display to utilize pseudo elements in order to fix backgrounds on mobile display. Updated background to cool blue bars.

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,23 @@
 body{
   background-color: white;
-  background-image: url(../img/test_background.jpg);
-  background-attachment: fixed;
+  /*background-image:url(../img/test_background.jpg);
+  background-attachment: fixed;*/
+}
+
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background-image: url(../img/test_background_2.png);
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 100%;
 }
 
 .introContainer {
